--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ h1 {
     text-align: center;
 }
 
-.btn {
+.start,
+.stop,
+.pause {
     margin-top: 60px;
     width: 100px;
     height: 40px;
@@ -39,20 +41,22 @@ h1 {
     border-radius: 50px;
 }
 
-.btn:hover {
+.start:hover,
+.stop:hover,
+.pause:hover {
     transform: scale(1.080);
 
 }
 
-#start {
+.start {
     background-color: #009779;
 }
 
-#stop {
+.stop {
     background-color: #c91400;
 }
 
-#pause {
+.pause {
     background-color: darkgray;
 }
 
@@ -60,6 +64,7 @@ h1 {
     height: 30px;
     width: 100px;
     border: 1px solid black;
+    border-radius: 10px;
     margin-top: 30px;
     background-color: white;
     text-align: center;
@@ -71,6 +76,6 @@ h1 {
     height: 100px;
     width: 150px;
     border: 1px solid black;
- 
+
     font-size: medium;
 }
